// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Stepper /> should match snapshots 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 300px;
}

.c0 .progress {
  background-image: linear-gradient(90deg,#e0e0e0 50%,transparent 50%), linear-gradient(-50deg,#e0e0e0 50%,#0CC0EA 50%);
}

.c1 {
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  float: left;
  font-weight: 700;
  width: 64px;
  height: 64px;
  font-size: 12px;
}

.c2 {
  background: #ffffff;
  border-radius: 50%;
  margin: auto;
  text-align: center;
  padding-top: 16px;
  width: 52px;
  height: 34px;
}

.c3 {
  margin-left: 16px;
  width: 210px;
  display: inline-block;
}

.c3 strong,
.c3 small {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  display: block;
  height: 26px;
  font-size: 20px;
}

.c5 {
  display: block;
  font-size: 14px;
}

@media (min-width:1024px) {
  .c1 {
    width: 72px;
    height: 72px;
    font-size: 14px;
  }
}

@media (min-width:1024px) {
  .c2 {
    padding-top: 18px;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 60px;
    height: 40px;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 300px;
  }
}

@media (min-width:1024px) {
  .c4 {
    font-size: 28px;
    height: 36px;
  }
}

@media (min-width:1024px) {
  .c5 {
    font-size: 16px;
  }
}

<Stepper
  currentStepText="Salários / benefícios"
  index={1}
  isPtBR={false}
  nextStepText="Contrato / Local"
  skin="primary"
  theme={
    Object {
      "baseFontSize": 16,
      "colors": Object {
        "error": Object {
          "100": "#fff5f5",
          "300": "#f88e86",
          "500": "#ec584e",
          "700": "#e91b0c",
          "900": "#ac001a",
        },
        "neutral": Object {
          "0": "#ffffff",
          "100": "#f2f2f2",
          "1000": "#000000",
          "300": "#e0e0e0",
          "500": "#999999",
          "700": "#424242",
          "900": "#191919",
        },
        "primary": Object {
          "100": "#E5EDFC",
          "300": "#89AAE7",
          "500": "#0CC0EA",
          "700": "#1250C4",
          "900": "#002F7B",
        },
        "secondary": Object {
          "100": "#F7B0C8",
          "300": "#F278A1",
          "500": "#E91E63",
          "700": "#DE0059",
          "900": "#9E003F",
        },
        "success": Object {
          "100": "#dcedc8",
          "300": "#c9eda2",
          "500": "#7ed321",
          "700": "#3b610f",
          "900": "#004D40",
        },
        "warning": Object {
          "100": "#ffefd6",
          "300": "#ffda6a",
          "500": "#ffc107",
          "700": "#f09100",
          "900": "#d14900",
        },
      },
      "spacing": Object {
        "large": 24,
        "medium": 16,
        "small": 12,
        "xlarge": 32,
        "xsmall": 8,
        "xxlarge": 40,
        "xxsmall": 4,
        "xxxlarge": 48,
        "xxxsmall": 2,
      },
    }
  }
  total={6}
>
  <style__Wrapper
    degrees={
      Array [
        90,
        -50,
      ]
    }
    skin="primary"
    theme={
      Object {
        "baseFontSize": 16,
        "colors": Object {
          "error": Object {
            "100": "#fff5f5",
            "300": "#f88e86",
            "500": "#ec584e",
            "700": "#e91b0c",
            "900": "#ac001a",
          },
          "neutral": Object {
            "0": "#ffffff",
            "100": "#f2f2f2",
            "1000": "#000000",
            "300": "#e0e0e0",
            "500": "#999999",
            "700": "#424242",
            "900": "#191919",
          },
          "primary": Object {
            "100": "#E5EDFC",
            "300": "#89AAE7",
            "500": "#0CC0EA",
            "700": "#1250C4",
            "900": "#002F7B",
          },
          "secondary": Object {
            "100": "#F7B0C8",
            "300": "#F278A1",
            "500": "#E91E63",
            "700": "#DE0059",
            "900": "#9E003F",
          },
          "success": Object {
            "100": "#dcedc8",
            "300": "#c9eda2",
            "500": "#7ed321",
            "700": "#3b610f",
            "900": "#004D40",
          },
          "warning": Object {
            "100": "#ffefd6",
            "300": "#ffda6a",
            "500": "#ffc107",
            "700": "#f09100",
            "900": "#d14900",
          },
        },
        "spacing": Object {
          "large": 24,
          "medium": 16,
          "small": 12,
          "xlarge": 32,
          "xsmall": 8,
          "xxlarge": 40,
          "xxsmall": 4,
          "xxxlarge": 48,
          "xxxsmall": 2,
        },
      }
    }
  >
    <div
      className="c0"
    >
      <style__RadialProgressBar
        className="progress"
        skin="primary"
        theme={
          Object {
            "baseFontSize": 16,
            "colors": Object {
              "error": Object {
                "100": "#fff5f5",
                "300": "#f88e86",
                "500": "#ec584e",
                "700": "#e91b0c",
                "900": "#ac001a",
              },
              "neutral": Object {
                "0": "#ffffff",
                "100": "#f2f2f2",
                "1000": "#000000",
                "300": "#e0e0e0",
                "500": "#999999",
                "700": "#424242",
                "900": "#191919",
              },
              "primary": Object {
                "100": "#E5EDFC",
                "300": "#89AAE7",
                "500": "#0CC0EA",
                "700": "#1250C4",
                "900": "#002F7B",
              },
              "secondary": Object {
                "100": "#F7B0C8",
                "300": "#F278A1",
                "500": "#E91E63",
                "700": "#DE0059",
                "900": "#9E003F",
              },
              "success": Object {
                "100": "#dcedc8",
                "300": "#c9eda2",
                "500": "#7ed321",
                "700": "#3b610f",
                "900": "#004D40",
              },
              "warning": Object {
                "100": "#ffefd6",
                "300": "#ffda6a",
                "500": "#ffc107",
                "700": "#f09100",
                "900": "#d14900",
              },
            },
            "spacing": Object {
              "large": 24,
              "medium": 16,
              "small": 12,
              "xlarge": 32,
              "xsmall": 8,
              "xxlarge": 40,
              "xxsmall": 4,
              "xxxlarge": 48,
              "xxxsmall": 2,
            },
          }
        }
      >
        <div
          className="c1 progress"
        >
          <RadialProgressOverlay
            skin="primary"
            theme={
              Object {
                "baseFontSize": 16,
                "colors": Object {
                  "error": Object {
                    "100": "#fff5f5",
                    "300": "#f88e86",
                    "500": "#ec584e",
                    "700": "#e91b0c",
                    "900": "#ac001a",
                  },
                  "neutral": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                  "primary": Object {
                    "100": "#E5EDFC",
                    "300": "#89AAE7",
                    "500": "#0CC0EA",
                    "700": "#1250C4",
                    "900": "#002F7B",
                  },
                  "secondary": Object {
                    "100": "#F7B0C8",
                    "300": "#F278A1",
                    "500": "#E91E63",
                    "700": "#DE0059",
                    "900": "#9E003F",
                  },
                  "success": Object {
                    "100": "#dcedc8",
                    "300": "#c9eda2",
                    "500": "#7ed321",
                    "700": "#3b610f",
                    "900": "#004D40",
                  },
                  "warning": Object {
                    "100": "#ffefd6",
                    "300": "#ffda6a",
                    "500": "#ffc107",
                    "700": "#f09100",
                    "900": "#d14900",
                  },
                },
                "spacing": Object {
                  "large": 24,
                  "medium": 16,
                  "small": 12,
                  "xlarge": 32,
                  "xsmall": 8,
                  "xxlarge": 40,
                  "xxsmall": 4,
                  "xxxlarge": 48,
                  "xxxsmall": 2,
                },
              }
            }
          >
            <div
              className="c2"
            >
              1
               
              of
               
              6
            </div>
          </RadialProgressOverlay>
        </div>
      </style__RadialProgressBar>
      <style__TextWrapper
        skin="primary"
        theme={
          Object {
            "baseFontSize": 16,
            "colors": Object {
              "error": Object {
                "100": "#fff5f5",
                "300": "#f88e86",
                "500": "#ec584e",
                "700": "#e91b0c",
                "900": "#ac001a",
              },
              "neutral": Object {
                "0": "#ffffff",
                "100": "#f2f2f2",
                "1000": "#000000",
                "300": "#e0e0e0",
                "500": "#999999",
                "700": "#424242",
                "900": "#191919",
              },
              "primary": Object {
                "100": "#E5EDFC",
                "300": "#89AAE7",
                "500": "#0CC0EA",
                "700": "#1250C4",
                "900": "#002F7B",
              },
              "secondary": Object {
                "100": "#F7B0C8",
                "300": "#F278A1",
                "500": "#E91E63",
                "700": "#DE0059",
                "900": "#9E003F",
              },
              "success": Object {
                "100": "#dcedc8",
                "300": "#c9eda2",
                "500": "#7ed321",
                "700": "#3b610f",
                "900": "#004D40",
              },
              "warning": Object {
                "100": "#ffefd6",
                "300": "#ffda6a",
                "500": "#ffc107",
                "700": "#f09100",
                "900": "#d14900",
              },
            },
            "spacing": Object {
              "large": 24,
              "medium": 16,
              "small": 12,
              "xlarge": 32,
              "xsmall": 8,
              "xxlarge": 40,
              "xxsmall": 4,
              "xxxlarge": 48,
              "xxxsmall": 2,
            },
          }
        }
      >
        <div
          className="c3"
        >
          <style__CurrentText
            skin="primary"
            theme={
              Object {
                "baseFontSize": 16,
                "colors": Object {
                  "error": Object {
                    "100": "#fff5f5",
                    "300": "#f88e86",
                    "500": "#ec584e",
                    "700": "#e91b0c",
                    "900": "#ac001a",
                  },
                  "neutral": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                  "primary": Object {
                    "100": "#E5EDFC",
                    "300": "#89AAE7",
                    "500": "#0CC0EA",
                    "700": "#1250C4",
                    "900": "#002F7B",
                  },
                  "secondary": Object {
                    "100": "#F7B0C8",
                    "300": "#F278A1",
                    "500": "#E91E63",
                    "700": "#DE0059",
                    "900": "#9E003F",
                  },
                  "success": Object {
                    "100": "#dcedc8",
                    "300": "#c9eda2",
                    "500": "#7ed321",
                    "700": "#3b610f",
                    "900": "#004D40",
                  },
                  "warning": Object {
                    "100": "#ffefd6",
                    "300": "#ffda6a",
                    "500": "#ffc107",
                    "700": "#f09100",
                    "900": "#d14900",
                  },
                },
                "spacing": Object {
                  "large": 24,
                  "medium": 16,
                  "small": 12,
                  "xlarge": 32,
                  "xsmall": 8,
                  "xxlarge": 40,
                  "xxsmall": 4,
                  "xxxlarge": 48,
                  "xxxsmall": 2,
                },
              }
            }
          >
            <strong
              className="c4"
            >
              Salários / benefícios
            </strong>
          </style__CurrentText>
          <NextStep
            skin="primary"
            theme={
              Object {
                "baseFontSize": 16,
                "colors": Object {
                  "error": Object {
                    "100": "#fff5f5",
                    "300": "#f88e86",
                    "500": "#ec584e",
                    "700": "#e91b0c",
                    "900": "#ac001a",
                  },
                  "neutral": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                  "primary": Object {
                    "100": "#E5EDFC",
                    "300": "#89AAE7",
                    "500": "#0CC0EA",
                    "700": "#1250C4",
                    "900": "#002F7B",
                  },
                  "secondary": Object {
                    "100": "#F7B0C8",
                    "300": "#F278A1",
                    "500": "#E91E63",
                    "700": "#DE0059",
                    "900": "#9E003F",
                  },
                  "success": Object {
                    "100": "#dcedc8",
                    "300": "#c9eda2",
                    "500": "#7ed321",
                    "700": "#3b610f",
                    "900": "#004D40",
                  },
                  "warning": Object {
                    "100": "#ffefd6",
                    "300": "#ffda6a",
                    "500": "#ffc107",
                    "700": "#f09100",
                    "900": "#d14900",
                  },
                },
                "spacing": Object {
                  "large": 24,
                  "medium": 16,
                  "small": 12,
                  "xlarge": 32,
                  "xsmall": 8,
                  "xxlarge": 40,
                  "xxsmall": 4,
                  "xxxlarge": 48,
                  "xxxsmall": 2,
                },
              }
            }
          >
            <small
              className="c5"
            >
              next: 
               
              Contrato / Local
            </small>
          </NextStep>
        </div>
      </style__TextWrapper>
    </div>
  </style__Wrapper>
</Stepper>
`;

exports[`<Stepper /> should match snapshots 2`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 300px;
}

.c0 .progress {
  background-image: linear-gradient(90deg,#e0e0e0 50%,transparent 50%), linear-gradient(20deg,#e0e0e0 50%,#0CC0EA 50%);
}

.c1 {
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  float: left;
  font-weight: 700;
  width: 64px;
  height: 64px;
  font-size: 12px;
}

.c2 {
  background: #ffffff;
  border-radius: 50%;
  margin: auto;
  text-align: center;
  padding-top: 16px;
  width: 52px;
  height: 34px;
}

.c3 {
  margin-left: 16px;
  width: 210px;
  display: inline-block;
}

.c3 strong,
.c3 small {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  display: block;
  height: 26px;
  font-size: 20px;
}

.c5 {
  display: block;
  font-size: 14px;
}

@media (min-width:1024px) {
  .c1 {
    width: 72px;
    height: 72px;
    font-size: 14px;
  }
}

@media (min-width:1024px) {
  .c2 {
    padding-top: 18px;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 60px;
    height: 40px;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 300px;
  }
}

@media (min-width:1024px) {
  .c4 {
    font-size: 28px;
    height: 36px;
  }
}

@media (min-width:1024px) {
  .c5 {
    font-size: 16px;
  }
}

<Stepper
  currentStepText="Salários / benefícios"
  index={2}
  isPtBR={false}
  nextStepText="Contrato / Local "
  skin="primary"
  theme={
    Object {
      "baseFontSize": 16,
      "colors": Object {
        "error": Object {
          "100": "#fff5f5",
          "300": "#f88e86",
          "500": "#ec584e",
          "700": "#e91b0c",
          "900": "#ac001a",
        },
        "neutral": Object {
          "0": "#ffffff",
          "100": "#f2f2f2",
          "1000": "#000000",
          "300": "#e0e0e0",
          "500": "#999999",
          "700": "#424242",
          "900": "#191919",
        },
        "primary": Object {
          "100": "#E5EDFC",
          "300": "#89AAE7",
          "500": "#0CC0EA",
          "700": "#1250C4",
          "900": "#002F7B",
        },
        "secondary": Object {
          "100": "#F7B0C8",
          "300": "#F278A1",
          "500": "#E91E63",
          "700": "#DE0059",
          "900": "#9E003F",
        },
        "success": Object {
          "100": "#dcedc8",
          "300": "#c9eda2",
          "500": "#7ed321",
          "700": "#3b610f",
          "900": "#004D40",
        },
        "warning": Object {
          "100": "#ffefd6",
          "300": "#ffda6a",
          "500": "#ffc107",
          "700": "#f09100",
          "900": "#d14900",
        },
      },
      "spacing": Object {
        "large": 24,
        "medium": 16,
        "small": 12,
        "xlarge": 32,
        "xsmall": 8,
        "xxlarge": 40,
        "xxsmall": 4,
        "xxxlarge": 48,
        "xxxsmall": 2,
      },
    }
  }
  total={6}
>
  <style__Wrapper
    degrees={
      Array [
        90,
        20,
      ]
    }
    skin="primary"
    theme={
      Object {
        "baseFontSize": 16,
        "colors": Object {
          "error": Object {
            "100": "#fff5f5",
            "300": "#f88e86",
            "500": "#ec584e",
            "700": "#e91b0c",
            "900": "#ac001a",
          },
          "neutral": Object {
            "0": "#ffffff",
            "100": "#f2f2f2",
            "1000": "#000000",
            "300": "#e0e0e0",
            "500": "#999999",
            "700": "#424242",
            "900": "#191919",
          },
          "primary": Object {
            "100": "#E5EDFC",
            "300": "#89AAE7",
            "500": "#0CC0EA",
            "700": "#1250C4",
            "900": "#002F7B",
          },
          "secondary": Object {
            "100": "#F7B0C8",
            "300": "#F278A1",
            "500": "#E91E63",
            "700": "#DE0059",
            "900": "#9E003F",
          },
          "success": Object {
            "100": "#dcedc8",
            "300": "#c9eda2",
            "500": "#7ed321",
            "700": "#3b610f",
            "900": "#004D40",
          },
          "warning": Object {
            "100": "#ffefd6",
            "300": "#ffda6a",
            "500": "#ffc107",
            "700": "#f09100",
            "900": "#d14900",
          },
        },
        "spacing": Object {
          "large": 24,
          "medium": 16,
          "small": 12,
          "xlarge": 32,
          "xsmall": 8,
          "xxlarge": 40,
          "xxsmall": 4,
          "xxxlarge": 48,
          "xxxsmall": 2,
        },
      }
    }
  >
    <div
      className="c0"
    >
      <style__RadialProgressBar
        className="progress"
        skin="primary"
        theme={
          Object {
            "baseFontSize": 16,
            "colors": Object {
              "error": Object {
                "100": "#fff5f5",
                "300": "#f88e86",
                "500": "#ec584e",
                "700": "#e91b0c",
                "900": "#ac001a",
              },
              "neutral": Object {
                "0": "#ffffff",
                "100": "#f2f2f2",
                "1000": "#000000",
                "300": "#e0e0e0",
                "500": "#999999",
                "700": "#424242",
                "900": "#191919",
              },
              "primary": Object {
                "100": "#E5EDFC",
                "300": "#89AAE7",
                "500": "#0CC0EA",
                "700": "#1250C4",
                "900": "#002F7B",
              },
              "secondary": Object {
                "100": "#F7B0C8",
                "300": "#F278A1",
                "500": "#E91E63",
                "700": "#DE0059",
                "900": "#9E003F",
              },
              "success": Object {
                "100": "#dcedc8",
                "300": "#c9eda2",
                "500": "#7ed321",
                "700": "#3b610f",
                "900": "#004D40",
              },
              "warning": Object {
                "100": "#ffefd6",
                "300": "#ffda6a",
                "500": "#ffc107",
                "700": "#f09100",
                "900": "#d14900",
              },
            },
            "spacing": Object {
              "large": 24,
              "medium": 16,
              "small": 12,
              "xlarge": 32,
              "xsmall": 8,
              "xxlarge": 40,
              "xxsmall": 4,
              "xxxlarge": 48,
              "xxxsmall": 2,
            },
          }
        }
      >
        <div
          className="c1 progress"
        >
          <RadialProgressOverlay
            skin="primary"
            theme={
              Object {
                "baseFontSize": 16,
                "colors": Object {
                  "error": Object {
                    "100": "#fff5f5",
                    "300": "#f88e86",
                    "500": "#ec584e",
                    "700": "#e91b0c",
                    "900": "#ac001a",
                  },
                  "neutral": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                  "primary": Object {
                    "100": "#E5EDFC",
                    "300": "#89AAE7",
                    "500": "#0CC0EA",
                    "700": "#1250C4",
                    "900": "#002F7B",
                  },
                  "secondary": Object {
                    "100": "#F7B0C8",
                    "300": "#F278A1",
                    "500": "#E91E63",
                    "700": "#DE0059",
                    "900": "#9E003F",
                  },
                  "success": Object {
                    "100": "#dcedc8",
                    "300": "#c9eda2",
                    "500": "#7ed321",
                    "700": "#3b610f",
                    "900": "#004D40",
                  },
                  "warning": Object {
                    "100": "#ffefd6",
                    "300": "#ffda6a",
                    "500": "#ffc107",
                    "700": "#f09100",
                    "900": "#d14900",
                  },
                },
                "spacing": Object {
                  "large": 24,
                  "medium": 16,
                  "small": 12,
                  "xlarge": 32,
                  "xsmall": 8,
                  "xxlarge": 40,
                  "xxsmall": 4,
                  "xxxlarge": 48,
                  "xxxsmall": 2,
                },
              }
            }
          >
            <div
              className="c2"
            >
              2
               
              of
               
              6
            </div>
          </RadialProgressOverlay>
        </div>
      </style__RadialProgressBar>
      <style__TextWrapper
        skin="primary"
        theme={
          Object {
            "baseFontSize": 16,
            "colors": Object {
              "error": Object {
                "100": "#fff5f5",
                "300": "#f88e86",
                "500": "#ec584e",
                "700": "#e91b0c",
                "900": "#ac001a",
              },
              "neutral": Object {
                "0": "#ffffff",
                "100": "#f2f2f2",
                "1000": "#000000",
                "300": "#e0e0e0",
                "500": "#999999",
                "700": "#424242",
                "900": "#191919",
              },
              "primary": Object {
                "100": "#E5EDFC",
                "300": "#89AAE7",
                "500": "#0CC0EA",
                "700": "#1250C4",
                "900": "#002F7B",
              },
              "secondary": Object {
                "100": "#F7B0C8",
                "300": "#F278A1",
                "500": "#E91E63",
                "700": "#DE0059",
                "900": "#9E003F",
              },
              "success": Object {
                "100": "#dcedc8",
                "300": "#c9eda2",
                "500": "#7ed321",
                "700": "#3b610f",
                "900": "#004D40",
              },
              "warning": Object {
                "100": "#ffefd6",
                "300": "#ffda6a",
                "500": "#ffc107",
                "700": "#f09100",
                "900": "#d14900",
              },
            },
            "spacing": Object {
              "large": 24,
              "medium": 16,
              "small": 12,
              "xlarge": 32,
              "xsmall": 8,
              "xxlarge": 40,
              "xxsmall": 4,
              "xxxlarge": 48,
              "xxxsmall": 2,
            },
          }
        }
      >
        <div
          className="c3"
        >
          <style__CurrentText
            skin="primary"
            theme={
              Object {
                "baseFontSize": 16,
                "colors": Object {
                  "error": Object {
                    "100": "#fff5f5",
                    "300": "#f88e86",
                    "500": "#ec584e",
                    "700": "#e91b0c",
                    "900": "#ac001a",
                  },
                  "neutral": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                  "primary": Object {
                    "100": "#E5EDFC",
                    "300": "#89AAE7",
                    "500": "#0CC0EA",
                    "700": "#1250C4",
                    "900": "#002F7B",
                  },
                  "secondary": Object {
                    "100": "#F7B0C8",
                    "300": "#F278A1",
                    "500": "#E91E63",
                    "700": "#DE0059",
                    "900": "#9E003F",
                  },
                  "success": Object {
                    "100": "#dcedc8",
                    "300": "#c9eda2",
                    "500": "#7ed321",
                    "700": "#3b610f",
                    "900": "#004D40",
                  },
                  "warning": Object {
                    "100": "#ffefd6",
                    "300": "#ffda6a",
                    "500": "#ffc107",
                    "700": "#f09100",
                    "900": "#d14900",
                  },
                },
                "spacing": Object {
                  "large": 24,
                  "medium": 16,
                  "small": 12,
                  "xlarge": 32,
                  "xsmall": 8,
                  "xxlarge": 40,
                  "xxsmall": 4,
                  "xxxlarge": 48,
                  "xxxsmall": 2,
                },
              }
            }
          >
            <strong
              className="c4"
            >
              Salários / benefícios
            </strong>
          </style__CurrentText>
          <NextStep
            skin="primary"
            theme={
              Object {
                "baseFontSize": 16,
                "colors": Object {
                  "error": Object {
                    "100": "#fff5f5",
                    "300": "#f88e86",
                    "500": "#ec584e",
                    "700": "#e91b0c",
                    "900": "#ac001a",
                  },
                  "neutral": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                  "primary": Object {
                    "100": "#E5EDFC",
                    "300": "#89AAE7",
                    "500": "#0CC0EA",
                    "700": "#1250C4",
                    "900": "#002F7B",
                  },
                  "secondary": Object {
                    "100": "#F7B0C8",
                    "300": "#F278A1",
                    "500": "#E91E63",
                    "700": "#DE0059",
                    "900": "#9E003F",
                  },
                  "success": Object {
                    "100": "#dcedc8",
                    "300": "#c9eda2",
                    "500": "#7ed321",
                    "700": "#3b610f",
                    "900": "#004D40",
                  },
                  "warning": Object {
                    "100": "#ffefd6",
                    "300": "#ffda6a",
                    "500": "#ffc107",
                    "700": "#f09100",
                    "900": "#d14900",
                  },
                },
                "spacing": Object {
                  "large": 24,
                  "medium": 16,
                  "small": 12,
                  "xlarge": 32,
                  "xsmall": 8,
                  "xxlarge": 40,
                  "xxsmall": 4,
                  "xxxlarge": 48,
                  "xxxsmall": 2,
                },
              }
            }
          >
            <small
              className="c5"
            >
              next: 
               
              Contrato / Local 
            </small>
          </NextStep>
        </div>
      </style__TextWrapper>
    </div>
  </style__Wrapper>
</Stepper>
`;

exports[`<Stepper /> should match snapshots 3`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 300px;
}

.c0 .progress {
  background-image: linear-gradient(90deg,#e0e0e0 50%,transparent 50%), linear-gradient(90deg,#e0e0e0 50%,#0CC0EA 50%);
}

.c1 {
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  float: left;
  font-weight: 700;
  width: 64px;
  height: 64px;
  font-size: 12px;
}

.c2 {
  background: #ffffff;
  border-radius: 50%;
  margin: auto;
  text-align: center;
  padding-top: 16px;
  width: 52px;
  height: 34px;
}

.c3 {
  margin-left: 16px;
  width: 210px;
  display: inline-block;
}

.c3 strong,
.c3 small {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  display: block;
  height: 26px;
  font-size: 20px;
}

.c5 {
  display: block;
  font-size: 14px;
}

@media (min-width:1024px) {
  .c1 {
    width: 72px;
    height: 72px;
    font-size: 14px;
  }
}

@media (min-width:1024px) {
  .c2 {
    padding-top: 18px;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 60px;
    height: 40px;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 300px;
  }
}

@media (min-width:1024px) {
  .c4 {
    font-size: 28px;
    height: 36px;
  }
}

@media (min-width:1024px) {
  .c5 {
    font-size: 16px;
  }
}

<Stepper
  currentStepText="Salários / benefícios"
  index={3}
  isPtBR={false}
  nextStepText="Contrato / Local "
  skin="primary"
  theme={
    Object {
      "baseFontSize": 16,
      "colors": Object {
        "error": Object {
          "100": "#fff5f5",
          "300": "#f88e86",
          "500": "#ec584e",
          "700": "#e91b0c",
          "900": "#ac001a",
        },
        "neutral": Object {
          "0": "#ffffff",
          "100": "#f2f2f2",
          "1000": "#000000",
          "300": "#e0e0e0",
          "500": "#999999",
          "700": "#424242",
          "900": "#191919",
        },
        "primary": Object {
          "100": "#E5EDFC",
          "300": "#89AAE7",
          "500": "#0CC0EA",
          "700": "#1250C4",
          "900": "#002F7B",
        },
        "secondary": Object {
          "100": "#F7B0C8",
          "300": "#F278A1",
          "500": "#E91E63",
          "700": "#DE0059",
          "900": "#9E003F",
        },
        "success": Object {
          "100": "#dcedc8",
          "300": "#c9eda2",
          "500": "#7ed321",
          "700": "#3b610f",
          "900": "#004D40",
        },
        "warning": Object {
          "100": "#ffefd6",
          "300": "#ffda6a",
          "500": "#ffc107",
          "700": "#f09100",
          "900": "#d14900",
        },
      },
      "spacing": Object {
        "large": 24,
        "medium": 16,
        "small": 12,
        "xlarge": 32,
        "xsmall": 8,
        "xxlarge": 40,
        "xxsmall": 4,
        "xxxlarge": 48,
        "xxxsmall": 2,
      },
    }
  }
  total={6}
>
  <style__Wrapper
    degrees={
      Array [
        90,
        90,
      ]
    }
    skin="primary"
    theme={
      Object {
        "baseFontSize": 16,
        "colors": Object {
          "error": Object {
            "100": "#fff5f5",
            "300": "#f88e86",
            "500": "#ec584e",
            "700": "#e91b0c",
            "900": "#ac001a",
          },
          "neutral": Object {
            "0": "#ffffff",
            "100": "#f2f2f2",
            "1000": "#000000",
            "300": "#e0e0e0",
            "500": "#999999",
            "700": "#424242",
            "900": "#191919",
          },
          "primary": Object {
            "100": "#E5EDFC",
            "300": "#89AAE7",
            "500": "#0CC0EA",
            "700": "#1250C4",
            "900": "#002F7B",
          },
          "secondary": Object {
            "100": "#F7B0C8",
            "300": "#F278A1",
            "500": "#E91E63",
            "700": "#DE0059",
            "900": "#9E003F",
          },
          "success": Object {
            "100": "#dcedc8",
            "300": "#c9eda2",
            "500": "#7ed321",
            "700": "#3b610f",
            "900": "#004D40",
          },
          "warning": Object {
            "100": "#ffefd6",
            "300": "#ffda6a",
            "500": "#ffc107",
            "700": "#f09100",
            "900": "#d14900",
          },
        },
        "spacing": Object {
          "large": 24,
          "medium": 16,
          "small": 12,
          "xlarge": 32,
          "xsmall": 8,
          "xxlarge": 40,
          "xxsmall": 4,
          "xxxlarge": 48,
          "xxxsmall": 2,
        },
      }
    }
  >
    <div
      className="c0"
    >
      <style__RadialProgressBar
        className="progress"
        skin="primary"
        theme={
          Object {
            "baseFontSize": 16,
            "colors": Object {
              "error": Object {
                "100": "#fff5f5",
                "300": "#f88e86",
                "500": "#ec584e",
                "700": "#e91b0c",
                "900": "#ac001a",
              },
              "neutral": Object {
                "0": "#ffffff",
                "100": "#f2f2f2",
                "1000": "#000000",
                "300": "#e0e0e0",
                "500": "#999999",
                "700": "#424242",
                "900": "#191919",
              },
              "primary": Object {
                "100": "#E5EDFC",
                "300": "#89AAE7",
                "500": "#0CC0EA",
                "700": "#1250C4",
                "900": "#002F7B",
              },
              "secondary": Object {
                "100": "#F7B0C8",
                "300": "#F278A1",
                "500": "#E91E63",
                "700": "#DE0059",
                "900": "#9E003F",
              },
              "success": Object {
                "100": "#dcedc8",
                "300": "#c9eda2",
                "500": "#7ed321",
                "700": "#3b610f",
                "900": "#004D40",
              },
              "warning": Object {
                "100": "#ffefd6",
                "300": "#ffda6a",
                "500": "#ffc107",
                "700": "#f09100",
                "900": "#d14900",
              },
            },
            "spacing": Object {
              "large": 24,
              "medium": 16,
              "small": 12,
              "xlarge": 32,
              "xsmall": 8,
              "xxlarge": 40,
              "xxsmall": 4,
              "xxxlarge": 48,
              "xxxsmall": 2,
            },
          }
        }
      >
        <div
          className="c1 progress"
        >
          <RadialProgressOverlay
            skin="primary"
            theme={
              Object {
                "baseFontSize": 16,
                "colors": Object {
                  "error": Object {
                    "100": "#fff5f5",
                    "300": "#f88e86",
                    "500": "#ec584e",
                    "700": "#e91b0c",
                    "900": "#ac001a",
                  },
                  "neutral": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                  "primary": Object {
                    "100": "#E5EDFC",
                    "300": "#89AAE7",
                    "500": "#0CC0EA",
                    "700": "#1250C4",
                    "900": "#002F7B",
                  },
                  "secondary": Object {
                    "100": "#F7B0C8",
                    "300": "#F278A1",
                    "500": "#E91E63",
                    "700": "#DE0059",
                    "900": "#9E003F",
                  },
                  "success": Object {
                    "100": "#dcedc8",
                    "300": "#c9eda2",
                    "500": "#7ed321",
                    "700": "#3b610f",
                    "900": "#004D40",
                  },
                  "warning": Object {
                    "100": "#ffefd6",
                    "300": "#ffda6a",
                    "500": "#ffc107",
                    "700": "#f09100",
                    "900": "#d14900",
                  },
                },
                "spacing": Object {
                  "large": 24,
                  "medium": 16,
                  "small": 12,
                  "xlarge": 32,
                  "xsmall": 8,
                  "xxlarge": 40,
                  "xxsmall": 4,
                  "xxxlarge": 48,
                  "xxxsmall": 2,
                },
              }
            }
          >
            <div
              className="c2"
            >
              3
               
              of
               
              6
            </div>
          </RadialProgressOverlay>
        </div>
      </style__RadialProgressBar>
      <style__TextWrapper
        skin="primary"
        theme={
          Object {
            "baseFontSize": 16,
            "colors": Object {
              "error": Object {
                "100": "#fff5f5",
                "300": "#f88e86",
                "500": "#ec584e",
                "700": "#e91b0c",
                "900": "#ac001a",
              },
              "neutral": Object {
                "0": "#ffffff",
                "100": "#f2f2f2",
                "1000": "#000000",
                "300": "#e0e0e0",
                "500": "#999999",
                "700": "#424242",
                "900": "#191919",
              },
              "primary": Object {
                "100": "#E5EDFC",
                "300": "#89AAE7",
                "500": "#0CC0EA",
                "700": "#1250C4",
                "900": "#002F7B",
              },
              "secondary": Object {
                "100": "#F7B0C8",
                "300": "#F278A1",
                "500": "#E91E63",
                "700": "#DE0059",
                "900": "#9E003F",
              },
              "success": Object {
                "100": "#dcedc8",
                "300": "#c9eda2",
                "500": "#7ed321",
                "700": "#3b610f",
                "900": "#004D40",
              },
              "warning": Object {
                "100": "#ffefd6",
                "300": "#ffda6a",
                "500": "#ffc107",
                "700": "#f09100",
                "900": "#d14900",
              },
            },
            "spacing": Object {
              "large": 24,
              "medium": 16,
              "small": 12,
              "xlarge": 32,
              "xsmall": 8,
              "xxlarge": 40,
              "xxsmall": 4,
              "xxxlarge": 48,
              "xxxsmall": 2,
            },
          }
        }
      >
        <div
          className="c3"
        >
          <style__CurrentText
            skin="primary"
            theme={
              Object {
                "baseFontSize": 16,
                "colors": Object {
                  "error": Object {
                    "100": "#fff5f5",
                    "300": "#f88e86",
                    "500": "#ec584e",
                    "700": "#e91b0c",
                    "900": "#ac001a",
                  },
                  "neutral": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                  "primary": Object {
                    "100": "#E5EDFC",
                    "300": "#89AAE7",
                    "500": "#0CC0EA",
                    "700": "#1250C4",
                    "900": "#002F7B",
                  },
                  "secondary": Object {
                    "100": "#F7B0C8",
                    "300": "#F278A1",
                    "500": "#E91E63",
                    "700": "#DE0059",
                    "900": "#9E003F",
                  },
                  "success": Object {
                    "100": "#dcedc8",
                    "300": "#c9eda2",
                    "500": "#7ed321",
                    "700": "#3b610f",
                    "900": "#004D40",
                  },
                  "warning": Object {
                    "100": "#ffefd6",
                    "300": "#ffda6a",
                    "500": "#ffc107",
                    "700": "#f09100",
                    "900": "#d14900",
                  },
                },
                "spacing": Object {
                  "large": 24,
                  "medium": 16,
                  "small": 12,
                  "xlarge": 32,
                  "xsmall": 8,
                  "xxlarge": 40,
                  "xxsmall": 4,
                  "xxxlarge": 48,
                  "xxxsmall": 2,
                },
              }
            }
          >
            <strong
              className="c4"
            >
              Salários / benefícios
            </strong>
          </style__CurrentText>
          <NextStep
            skin="primary"
            theme={
              Object {
                "baseFontSize": 16,
                "colors": Object {
                  "error": Object {
                    "100": "#fff5f5",
                    "300": "#f88e86",
                    "500": "#ec584e",
                    "700": "#e91b0c",
                    "900": "#ac001a",
                  },
                  "neutral": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                  "primary": Object {
                    "100": "#E5EDFC",
                    "300": "#89AAE7",
                    "500": "#0CC0EA",
                    "700": "#1250C4",
                    "900": "#002F7B",
                  },
                  "secondary": Object {
                    "100": "#F7B0C8",
                    "300": "#F278A1",
                    "500": "#E91E63",
                    "700": "#DE0059",
                    "900": "#9E003F",
                  },
                  "success": Object {
                    "100": "#dcedc8",
                    "300": "#c9eda2",
                    "500": "#7ed321",
                    "700": "#3b610f",
                    "900": "#004D40",
                  },
                  "warning": Object {
                    "100": "#ffefd6",
                    "300": "#ffda6a",
                    "500": "#ffc107",
                    "700": "#f09100",
                    "900": "#d14900",
                  },
                },
                "spacing": Object {
                  "large": 24,
                  "medium": 16,
                  "small": 12,
                  "xlarge": 32,
                  "xsmall": 8,
                  "xxlarge": 40,
                  "xxsmall": 4,
                  "xxxlarge": 48,
                  "xxxsmall": 2,
                },
              }
            }
          >
            <small
              className="c5"
            >
              next: 
               
              Contrato / Local 
            </small>
          </NextStep>
        </div>
      </style__TextWrapper>
    </div>
  </style__Wrapper>
</Stepper>
`;

exports[`<Stepper /> should match snapshots 4`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 300px;
}

.c0 .progress {
  background-image: linear-gradient(-90deg,#0CC0EA 50%,transparent 50%), linear-gradient(-22deg,#0CC0EA 50%,#e0e0e0 50%);
}

.c1 {
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  float: left;
  font-weight: 700;
  width: 64px;
  height: 64px;
  font-size: 12px;
}

.c2 {
  background: #ffffff;
  border-radius: 50%;
  margin: auto;
  text-align: center;
  padding-top: 16px;
  width: 52px;
  height: 34px;
}

.c3 {
  margin-left: 16px;
  width: 210px;
  display: inline-block;
}

.c3 strong,
.c3 small {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  display: block;
  height: 26px;
  font-size: 20px;
}

.c5 {
  display: block;
  font-size: 14px;
}

@media (min-width:1024px) {
  .c1 {
    width: 72px;
    height: 72px;
    font-size: 14px;
  }
}

@media (min-width:1024px) {
  .c2 {
    padding-top: 18px;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 60px;
    height: 40px;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 300px;
  }
}

@media (min-width:1024px) {
  .c4 {
    font-size: 28px;
    height: 36px;
  }
}

@media (min-width:1024px) {
  .c5 {
    font-size: 16px;
  }
}

<Stepper
  currentStepText="Salários / benefícios"
  index={4}
  isPtBR={false}
  nextStepText="Contrato / Local "
  skin="primary"
  theme={
    Object {
      "baseFontSize": 16,
      "colors": Object {
        "error": Object {
          "100": "#fff5f5",
          "300": "#f88e86",
          "500": "#ec584e",
          "700": "#e91b0c",
          "900": "#ac001a",
        },
        "neutral": Object {
          "0": "#ffffff",
          "100": "#f2f2f2",
          "1000": "#000000",
          "300": "#e0e0e0",
          "500": "#999999",
          "700": "#424242",
          "900": "#191919",
        },
        "primary": Object {
          "100": "#E5EDFC",
          "300": "#89AAE7",
          "500": "#0CC0EA",
          "700": "#1250C4",
          "900": "#002F7B",
        },
        "secondary": Object {
          "100": "#F7B0C8",
          "300": "#F278A1",
          "500": "#E91E63",
          "700": "#DE0059",
          "900": "#9E003F",
        },
        "success": Object {
          "100": "#dcedc8",
          "300": "#c9eda2",
          "500": "#7ed321",
          "700": "#3b610f",
          "900": "#004D40",
        },
        "warning": Object {
          "100": "#ffefd6",
          "300": "#ffda6a",
          "500": "#ffc107",
          "700": "#f09100",
          "900": "#d14900",
        },
      },
      "spacing": Object {
        "large": 24,
        "medium": 16,
        "small": 12,
        "xlarge": 32,
        "xsmall": 8,
        "xxlarge": 40,
        "xxsmall": 4,
        "xxxlarge": 48,
        "xxxsmall": 2,
      },
    }
  }
  total={6}
>
  <style__Wrapper
    degrees={
      Array [
        -90,
        -22,
      ]
    }
    skin="primary"
    theme={
      Object {
        "baseFontSize": 16,
        "colors": Object {
          "error": Object {
            "100": "#fff5f5",
            "300": "#f88e86",
            "500": "#ec584e",
            "700": "#e91b0c",
            "900": "#ac001a",
          },
          "neutral": Object {
            "0": "#ffffff",
            "100": "#f2f2f2",
            "1000": "#000000",
            "300": "#e0e0e0",
            "500": "#999999",
            "700": "#424242",
            "900": "#191919",
          },
          "primary": Object {
            "100": "#E5EDFC",
            "300": "#89AAE7",
            "500": "#0CC0EA",
            "700": "#1250C4",
            "900": "#002F7B",
          },
          "secondary": Object {
            "100": "#F7B0C8",
            "300": "#F278A1",
            "500": "#E91E63",
            "700": "#DE0059",
            "900": "#9E003F",
          },
          "success": Object {
            "100": "#dcedc8",
            "300": "#c9eda2",
            "500": "#7ed321",
            "700": "#3b610f",
            "900": "#004D40",
          },
          "warning": Object {
            "100": "#ffefd6",
            "300": "#ffda6a",
            "500": "#ffc107",
            "700": "#f09100",
            "900": "#d14900",
          },
        },
        "spacing": Object {
          "large": 24,
          "medium": 16,
          "small": 12,
          "xlarge": 32,
          "xsmall": 8,
          "xxlarge": 40,
          "xxsmall": 4,
          "xxxlarge": 48,
          "xxxsmall": 2,
        },
      }
    }
  >
    <div
      className="c0"
    >
      <style__RadialProgressBar
        className="progress"
        skin="primary"
        theme={
          Object {
            "baseFontSize": 16,
            "colors": Object {
              "error": Object {
                "100": "#fff5f5",
                "300": "#f88e86",
                "500": "#ec584e",
                "700": "#e91b0c",
                "900": "#ac001a",
              },
              "neutral": Object {
                "0": "#ffffff",
                "100": "#f2f2f2",
                "1000": "#000000",
                "300": "#e0e0e0",
                "500": "#999999",
                "700": "#424242",
                "900": "#191919",
              },
              "primary": Object {
                "100": "#E5EDFC",
                "300": "#89AAE7",
                "500": "#0CC0EA",
                "700": "#1250C4",
                "900": "#002F7B",
              },
              "secondary": Object {
                "100": "#F7B0C8",
                "300": "#F278A1",
                "500": "#E91E63",
                "700": "#DE0059",
                "900": "#9E003F",
              },
              "success": Object {
                "100": "#dcedc8",
                "300": "#c9eda2",
                "500": "#7ed321",
                "700": "#3b610f",
                "900": "#004D40",
              },
              "warning": Object {
                "100": "#ffefd6",
                "300": "#ffda6a",
                "500": "#ffc107",
                "700": "#f09100",
                "900": "#d14900",
              },
            },
            "spacing": Object {
              "large": 24,
              "medium": 16,
              "small": 12,
              "xlarge": 32,
              "xsmall": 8,
              "xxlarge": 40,
              "xxsmall": 4,
              "xxxlarge": 48,
              "xxxsmall": 2,
            },
          }
        }
      >
        <div
          className="c1 progress"
        >
          <RadialProgressOverlay
            skin="primary"
            theme={
              Object {
                "baseFontSize": 16,
                "colors": Object {
                  "error": Object {
                    "100": "#fff5f5",
                    "300": "#f88e86",
                    "500": "#ec584e",
                    "700": "#e91b0c",
                    "900": "#ac001a",
                  },
                  "neutral": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                  "primary": Object {
                    "100": "#E5EDFC",
                    "300": "#89AAE7",
                    "500": "#0CC0EA",
                    "700": "#1250C4",
                    "900": "#002F7B",
                  },
                  "secondary": Object {
                    "100": "#F7B0C8",
                    "300": "#F278A1",
                    "500": "#E91E63",
                    "700": "#DE0059",
                    "900": "#9E003F",
                  },
                  "success": Object {
                    "100": "#dcedc8",
                    "300": "#c9eda2",
                    "500": "#7ed321",
                    "700": "#3b610f",
                    "900": "#004D40",
                  },
                  "warning": Object {
                    "100": "#ffefd6",
                    "300": "#ffda6a",
                    "500": "#ffc107",
                    "700": "#f09100",
                    "900": "#d14900",
                  },
                },
                "spacing": Object {
                  "large": 24,
                  "medium": 16,
                  "small": 12,
                  "xlarge": 32,
                  "xsmall": 8,
                  "xxlarge": 40,
                  "xxsmall": 4,
                  "xxxlarge": 48,
                  "xxxsmall": 2,
                },
              }
            }
          >
            <div
              className="c2"
            >
              4
               
              of
               
              6
            </div>
          </RadialProgressOverlay>
        </div>
      </style__RadialProgressBar>
      <style__TextWrapper
        skin="primary"
        theme={
          Object {
            "baseFontSize": 16,
            "colors": Object {
              "error": Object {
                "100": "#fff5f5",
                "300": "#f88e86",
                "500": "#ec584e",
                "700": "#e91b0c",
                "900": "#ac001a",
              },
              "neutral": Object {
                "0": "#ffffff",
                "100": "#f2f2f2",
                "1000": "#000000",
                "300": "#e0e0e0",
                "500": "#999999",
                "700": "#424242",
                "900": "#191919",
              },
              "primary": Object {
                "100": "#E5EDFC",
                "300": "#89AAE7",
                "500": "#0CC0EA",
                "700": "#1250C4",
                "900": "#002F7B",
              },
              "secondary": Object {
                "100": "#F7B0C8",
                "300": "#F278A1",
                "500": "#E91E63",
                "700": "#DE0059",
                "900": "#9E003F",
              },
              "success": Object {
                "100": "#dcedc8",
                "300": "#c9eda2",
                "500": "#7ed321",
                "700": "#3b610f",
                "900": "#004D40",
              },
              "warning": Object {
                "100": "#ffefd6",
                "300": "#ffda6a",
                "500": "#ffc107",
                "700": "#f09100",
                "900": "#d14900",
              },
            },
            "spacing": Object {
              "large": 24,
              "medium": 16,
              "small": 12,
              "xlarge": 32,
              "xsmall": 8,
              "xxlarge": 40,
              "xxsmall": 4,
              "xxxlarge": 48,
              "xxxsmall": 2,
            },
          }
        }
      >
        <div
          className="c3"
        >
          <style__CurrentText
            skin="primary"
            theme={
              Object {
                "baseFontSize": 16,
                "colors": Object {
                  "error": Object {
                    "100": "#fff5f5",
                    "300": "#f88e86",
                    "500": "#ec584e",
                    "700": "#e91b0c",
                    "900": "#ac001a",
                  },
                  "neutral": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                  "primary": Object {
                    "100": "#E5EDFC",
                    "300": "#89AAE7",
                    "500": "#0CC0EA",
                    "700": "#1250C4",
                    "900": "#002F7B",
                  },
                  "secondary": Object {
                    "100": "#F7B0C8",
                    "300": "#F278A1",
                    "500": "#E91E63",
                    "700": "#DE0059",
                    "900": "#9E003F",
                  },
                  "success": Object {
                    "100": "#dcedc8",
                    "300": "#c9eda2",
                    "500": "#7ed321",
                    "700": "#3b610f",
                    "900": "#004D40",
                  },
                  "warning": Object {
                    "100": "#ffefd6",
                    "300": "#ffda6a",
                    "500": "#ffc107",
                    "700": "#f09100",
                    "900": "#d14900",
                  },
                },
                "spacing": Object {
                  "large": 24,
                  "medium": 16,
                  "small": 12,
                  "xlarge": 32,
                  "xsmall": 8,
                  "xxlarge": 40,
                  "xxsmall": 4,
                  "xxxlarge": 48,
                  "xxxsmall": 2,
                },
              }
            }
          >
            <strong
              className="c4"
            >
              Salários / benefícios
            </strong>
          </style__CurrentText>
          <NextStep
            skin="primary"
            theme={
              Object {
                "baseFontSize": 16,
                "colors": Object {
                  "error": Object {
                    "100": "#fff5f5",
                    "300": "#f88e86",
                    "500": "#ec584e",
                    "700": "#e91b0c",
                    "900": "#ac001a",
                  },
                  "neutral": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                  "primary": Object {
                    "100": "#E5EDFC",
                    "300": "#89AAE7",
                    "500": "#0CC0EA",
                    "700": "#1250C4",
                    "900": "#002F7B",
                  },
                  "secondary": Object {
                    "100": "#F7B0C8",
                    "300": "#F278A1",
                    "500": "#E91E63",
                    "700": "#DE0059",
                    "900": "#9E003F",
                  },
                  "success": Object {
                    "100": "#dcedc8",
                    "300": "#c9eda2",
                    "500": "#7ed321",
                    "700": "#3b610f",
                    "900": "#004D40",
                  },
                  "warning": Object {
                    "100": "#ffefd6",
                    "300": "#ffda6a",
                    "500": "#ffc107",
                    "700": "#f09100",
                    "900": "#d14900",
                  },
                },
                "spacing": Object {
                  "large": 24,
                  "medium": 16,
                  "small": 12,
                  "xlarge": 32,
                  "xsmall": 8,
                  "xxlarge": 40,
                  "xxsmall": 4,
                  "xxxlarge": 48,
                  "xxxsmall": 2,
                },
              }
            }
          >
            <small
              className="c5"
            >
              next: 
               
              Contrato / Local 
            </small>
          </NextStep>
        </div>
      </style__TextWrapper>
    </div>
  </style__Wrapper>
</Stepper>
`;

exports[`<Stepper /> should match snapshots 5`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 300px;
}

.c0 .progress {
  background-image: linear-gradient(-90deg,#0CC0EA 50%,transparent 50%), linear-gradient(20deg,#0CC0EA 50%,#e0e0e0 50%);
}

.c1 {
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  float: left;
  font-weight: 700;
  width: 64px;
  height: 64px;
  font-size: 12px;
}

.c2 {
  background: #ffffff;
  border-radius: 50%;
  margin: auto;
  text-align: center;
  padding-top: 16px;
  width: 52px;
  height: 34px;
}

.c3 {
  margin-left: 16px;
  width: 210px;
  display: inline-block;
}

.c3 strong,
.c3 small {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  display: block;
  height: 26px;
  font-size: 20px;
}

.c5 {
  display: block;
  font-size: 14px;
}

@media (min-width:1024px) {
  .c1 {
    width: 72px;
    height: 72px;
    font-size: 14px;
  }
}

@media (min-width:1024px) {
  .c2 {
    padding-top: 18px;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 60px;
    height: 40px;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 300px;
  }
}

@media (min-width:1024px) {
  .c4 {
    font-size: 28px;
    height: 36px;
  }
}

@media (min-width:1024px) {
  .c5 {
    font-size: 16px;
  }
}

<Stepper
  currentStepText="Salários / benefícios"
  index={5}
  isPtBR={false}
  nextStepText="Contrato / Local "
  skin="primary"
  theme={
    Object {
      "baseFontSize": 16,
      "colors": Object {
        "error": Object {
          "100": "#fff5f5",
          "300": "#f88e86",
          "500": "#ec584e",
          "700": "#e91b0c",
          "900": "#ac001a",
        },
        "neutral": Object {
          "0": "#ffffff",
          "100": "#f2f2f2",
          "1000": "#000000",
          "300": "#e0e0e0",
          "500": "#999999",
          "700": "#424242",
          "900": "#191919",
        },
        "primary": Object {
          "100": "#E5EDFC",
          "300": "#89AAE7",
          "500": "#0CC0EA",
          "700": "#1250C4",
          "900": "#002F7B",
        },
        "secondary": Object {
          "100": "#F7B0C8",
          "300": "#F278A1",
          "500": "#E91E63",
          "700": "#DE0059",
          "900": "#9E003F",
        },
        "success": Object {
          "100": "#dcedc8",
          "300": "#c9eda2",
          "500": "#7ed321",
          "700": "#3b610f",
          "900": "#004D40",
        },
        "warning": Object {
          "100": "#ffefd6",
          "300": "#ffda6a",
          "500": "#ffc107",
          "700": "#f09100",
          "900": "#d14900",
        },
      },
      "spacing": Object {
        "large": 24,
        "medium": 16,
        "small": 12,
        "xlarge": 32,
        "xsmall": 8,
        "xxlarge": 40,
        "xxsmall": 4,
        "xxxlarge": 48,
        "xxxsmall": 2,
      },
    }
  }
  total={6}
>
  <style__Wrapper
    degrees={
      Array [
        -90,
        20,
      ]
    }
    skin="primary"
    theme={
      Object {
        "baseFontSize": 16,
        "colors": Object {
          "error": Object {
            "100": "#fff5f5",
            "300": "#f88e86",
            "500": "#ec584e",
            "700": "#e91b0c",
            "900": "#ac001a",
          },
          "neutral": Object {
            "0": "#ffffff",
            "100": "#f2f2f2",
            "1000": "#000000",
            "300": "#e0e0e0",
            "500": "#999999",
            "700": "#424242",
            "900": "#191919",
          },
          "primary": Object {
            "100": "#E5EDFC",
            "300": "#89AAE7",
            "500": "#0CC0EA",
            "700": "#1250C4",
            "900": "#002F7B",
          },
          "secondary": Object {
            "100": "#F7B0C8",
            "300": "#F278A1",
            "500": "#E91E63",
            "700": "#DE0059",
            "900": "#9E003F",
          },
          "success": Object {
            "100": "#dcedc8",
            "300": "#c9eda2",
            "500": "#7ed321",
            "700": "#3b610f",
            "900": "#004D40",
          },
          "warning": Object {
            "100": "#ffefd6",
            "300": "#ffda6a",
            "500": "#ffc107",
            "700": "#f09100",
            "900": "#d14900",
          },
        },
        "spacing": Object {
          "large": 24,
          "medium": 16,
          "small": 12,
          "xlarge": 32,
          "xsmall": 8,
          "xxlarge": 40,
          "xxsmall": 4,
          "xxxlarge": 48,
          "xxxsmall": 2,
        },
      }
    }
  >
    <div
      className="c0"
    >
      <style__RadialProgressBar
        className="progress"
        skin="primary"
        theme={
          Object {
            "baseFontSize": 16,
            "colors": Object {
              "error": Object {
                "100": "#fff5f5",
                "300": "#f88e86",
                "500": "#ec584e",
                "700": "#e91b0c",
                "900": "#ac001a",
              },
              "neutral": Object {
                "0": "#ffffff",
                "100": "#f2f2f2",
                "1000": "#000000",
                "300": "#e0e0e0",
                "500": "#999999",
                "700": "#424242",
                "900": "#191919",
              },
              "primary": Object {
                "100": "#E5EDFC",
                "300": "#89AAE7",
                "500": "#0CC0EA",
                "700": "#1250C4",
                "900": "#002F7B",
              },
              "secondary": Object {
                "100": "#F7B0C8",
                "300": "#F278A1",
                "500": "#E91E63",
                "700": "#DE0059",
                "900": "#9E003F",
              },
              "success": Object {
                "100": "#dcedc8",
                "300": "#c9eda2",
                "500": "#7ed321",
                "700": "#3b610f",
                "900": "#004D40",
              },
              "warning": Object {
                "100": "#ffefd6",
                "300": "#ffda6a",
                "500": "#ffc107",
                "700": "#f09100",
                "900": "#d14900",
              },
            },
            "spacing": Object {
              "large": 24,
              "medium": 16,
              "small": 12,
              "xlarge": 32,
              "xsmall": 8,
              "xxlarge": 40,
              "xxsmall": 4,
              "xxxlarge": 48,
              "xxxsmall": 2,
            },
          }
        }
      >
        <div
          className="c1 progress"
        >
          <RadialProgressOverlay
            skin="primary"
            theme={
              Object {
                "baseFontSize": 16,
                "colors": Object {
                  "error": Object {
                    "100": "#fff5f5",
                    "300": "#f88e86",
                    "500": "#ec584e",
                    "700": "#e91b0c",
                    "900": "#ac001a",
                  },
                  "neutral": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                  "primary": Object {
                    "100": "#E5EDFC",
                    "300": "#89AAE7",
                    "500": "#0CC0EA",
                    "700": "#1250C4",
                    "900": "#002F7B",
                  },
                  "secondary": Object {
                    "100": "#F7B0C8",
                    "300": "#F278A1",
                    "500": "#E91E63",
                    "700": "#DE0059",
                    "900": "#9E003F",
                  },
                  "success": Object {
                    "100": "#dcedc8",
                    "300": "#c9eda2",
                    "500": "#7ed321",
                    "700": "#3b610f",
                    "900": "#004D40",
                  },
                  "warning": Object {
                    "100": "#ffefd6",
                    "300": "#ffda6a",
                    "500": "#ffc107",
                    "700": "#f09100",
                    "900": "#d14900",
                  },
                },
                "spacing": Object {
                  "large": 24,
                  "medium": 16,
                  "small": 12,
                  "xlarge": 32,
                  "xsmall": 8,
                  "xxlarge": 40,
                  "xxsmall": 4,
                  "xxxlarge": 48,
                  "xxxsmall": 2,
                },
              }
            }
          >
            <div
              className="c2"
            >
              5
               
              of
               
              6
            </div>
          </RadialProgressOverlay>
        </div>
      </style__RadialProgressBar>
      <style__TextWrapper
        skin="primary"
        theme={
          Object {
            "baseFontSize": 16,
            "colors": Object {
              "error": Object {
                "100": "#fff5f5",
                "300": "#f88e86",
                "500": "#ec584e",
                "700": "#e91b0c",
                "900": "#ac001a",
              },
              "neutral": Object {
                "0": "#ffffff",
                "100": "#f2f2f2",
                "1000": "#000000",
                "300": "#e0e0e0",
                "500": "#999999",
                "700": "#424242",
                "900": "#191919",
              },
              "primary": Object {
                "100": "#E5EDFC",
                "300": "#89AAE7",
                "500": "#0CC0EA",
                "700": "#1250C4",
                "900": "#002F7B",
              },
              "secondary": Object {
                "100": "#F7B0C8",
                "300": "#F278A1",
                "500": "#E91E63",
                "700": "#DE0059",
                "900": "#9E003F",
              },
              "success": Object {
                "100": "#dcedc8",
                "300": "#c9eda2",
                "500": "#7ed321",
                "700": "#3b610f",
                "900": "#004D40",
              },
              "warning": Object {
                "100": "#ffefd6",
                "300": "#ffda6a",
                "500": "#ffc107",
                "700": "#f09100",
                "900": "#d14900",
              },
            },
            "spacing": Object {
              "large": 24,
              "medium": 16,
              "small": 12,
              "xlarge": 32,
              "xsmall": 8,
              "xxlarge": 40,
              "xxsmall": 4,
              "xxxlarge": 48,
              "xxxsmall": 2,
            },
          }
        }
      >
        <div
          className="c3"
        >
          <style__CurrentText
            skin="primary"
            theme={
              Object {
                "baseFontSize": 16,
                "colors": Object {
                  "error": Object {
                    "100": "#fff5f5",
                    "300": "#f88e86",
                    "500": "#ec584e",
                    "700": "#e91b0c",
                    "900": "#ac001a",
                  },
                  "neutral": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                  "primary": Object {
                    "100": "#E5EDFC",
                    "300": "#89AAE7",
                    "500": "#0CC0EA",
                    "700": "#1250C4",
                    "900": "#002F7B",
                  },
                  "secondary": Object {
                    "100": "#F7B0C8",
                    "300": "#F278A1",
                    "500": "#E91E63",
                    "700": "#DE0059",
                    "900": "#9E003F",
                  },
                  "success": Object {
                    "100": "#dcedc8",
                    "300": "#c9eda2",
                    "500": "#7ed321",
                    "700": "#3b610f",
                    "900": "#004D40",
                  },
                  "warning": Object {
                    "100": "#ffefd6",
                    "300": "#ffda6a",
                    "500": "#ffc107",
                    "700": "#f09100",
                    "900": "#d14900",
                  },
                },
                "spacing": Object {
                  "large": 24,
                  "medium": 16,
                  "small": 12,
                  "xlarge": 32,
                  "xsmall": 8,
                  "xxlarge": 40,
                  "xxsmall": 4,
                  "xxxlarge": 48,
                  "xxxsmall": 2,
                },
              }
            }
          >
            <strong
              className="c4"
            >
              Salários / benefícios
            </strong>
          </style__CurrentText>
          <NextStep
            skin="primary"
            theme={
              Object {
                "baseFontSize": 16,
                "colors": Object {
                  "error": Object {
                    "100": "#fff5f5",
                    "300": "#f88e86",
                    "500": "#ec584e",
                    "700": "#e91b0c",
                    "900": "#ac001a",
                  },
                  "neutral": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                  "primary": Object {
                    "100": "#E5EDFC",
                    "300": "#89AAE7",
                    "500": "#0CC0EA",
                    "700": "#1250C4",
                    "900": "#002F7B",
                  },
                  "secondary": Object {
                    "100": "#F7B0C8",
                    "300": "#F278A1",
                    "500": "#E91E63",
                    "700": "#DE0059",
                    "900": "#9E003F",
                  },
                  "success": Object {
                    "100": "#dcedc8",
                    "300": "#c9eda2",
                    "500": "#7ed321",
                    "700": "#3b610f",
                    "900": "#004D40",
                  },
                  "warning": Object {
                    "100": "#ffefd6",
                    "300": "#ffda6a",
                    "500": "#ffc107",
                    "700": "#f09100",
                    "900": "#d14900",
                  },
                },
                "spacing": Object {
                  "large": 24,
                  "medium": 16,
                  "small": 12,
                  "xlarge": 32,
                  "xsmall": 8,
                  "xxlarge": 40,
                  "xxsmall": 4,
                  "xxxlarge": 48,
                  "xxxsmall": 2,
                },
              }
            }
          >
            <small
              className="c5"
            >
              next: 
               
              Contrato / Local 
            </small>
          </NextStep>
        </div>
      </style__TextWrapper>
    </div>
  </style__Wrapper>
</Stepper>
`;

exports[`<Stepper /> should match snapshots 6`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 300px;
}

.c0 .progress {
  background-image: linear-gradient(-90deg,#0CC0EA 50%,transparent 50%), linear-gradient(90deg,#0CC0EA 50%,#e0e0e0 50%);
}

.c1 {
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  float: left;
  font-weight: 700;
  width: 64px;
  height: 64px;
  font-size: 12px;
}

.c2 {
  background: #ffffff;
  border-radius: 50%;
  margin: auto;
  text-align: center;
  padding-top: 16px;
  width: 52px;
  height: 34px;
}

.c3 {
  margin-left: 16px;
  width: 210px;
  display: inline-block;
}

.c3 strong,
.c3 small {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  display: block;
  height: 26px;
  font-size: 20px;
}

.c5 {
  display: block;
  font-size: 14px;
}

@media (min-width:1024px) {
  .c1 {
    width: 72px;
    height: 72px;
    font-size: 14px;
  }
}

@media (min-width:1024px) {
  .c2 {
    padding-top: 18px;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 60px;
    height: 40px;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 300px;
  }
}

@media (min-width:1024px) {
  .c4 {
    font-size: 28px;
    height: 36px;
  }
}

@media (min-width:1024px) {
  .c5 {
    font-size: 16px;
  }
}

<Stepper
  currentStepText="Salários / benefícios"
  index={6}
  isPtBR={false}
  nextStepText="Contrato / Local "
  skin="primary"
  theme={
    Object {
      "baseFontSize": 16,
      "colors": Object {
        "error": Object {
          "100": "#fff5f5",
          "300": "#f88e86",
          "500": "#ec584e",
          "700": "#e91b0c",
          "900": "#ac001a",
        },
        "neutral": Object {
          "0": "#ffffff",
          "100": "#f2f2f2",
          "1000": "#000000",
          "300": "#e0e0e0",
          "500": "#999999",
          "700": "#424242",
          "900": "#191919",
        },
        "primary": Object {
          "100": "#E5EDFC",
          "300": "#89AAE7",
          "500": "#0CC0EA",
          "700": "#1250C4",
          "900": "#002F7B",
        },
        "secondary": Object {
          "100": "#F7B0C8",
          "300": "#F278A1",
          "500": "#E91E63",
          "700": "#DE0059",
          "900": "#9E003F",
        },
        "success": Object {
          "100": "#dcedc8",
          "300": "#c9eda2",
          "500": "#7ed321",
          "700": "#3b610f",
          "900": "#004D40",
        },
        "warning": Object {
          "100": "#ffefd6",
          "300": "#ffda6a",
          "500": "#ffc107",
          "700": "#f09100",
          "900": "#d14900",
        },
      },
      "spacing": Object {
        "large": 24,
        "medium": 16,
        "small": 12,
        "xlarge": 32,
        "xsmall": 8,
        "xxlarge": 40,
        "xxsmall": 4,
        "xxxlarge": 48,
        "xxxsmall": 2,
      },
    }
  }
  total={6}
>
  <style__Wrapper
    degrees={
      Array [
        -90,
        90,
      ]
    }
    skin="primary"
    theme={
      Object {
        "baseFontSize": 16,
        "colors": Object {
          "error": Object {
            "100": "#fff5f5",
            "300": "#f88e86",
            "500": "#ec584e",
            "700": "#e91b0c",
            "900": "#ac001a",
          },
          "neutral": Object {
            "0": "#ffffff",
            "100": "#f2f2f2",
            "1000": "#000000",
            "300": "#e0e0e0",
            "500": "#999999",
            "700": "#424242",
            "900": "#191919",
          },
          "primary": Object {
            "100": "#E5EDFC",
            "300": "#89AAE7",
            "500": "#0CC0EA",
            "700": "#1250C4",
            "900": "#002F7B",
          },
          "secondary": Object {
            "100": "#F7B0C8",
            "300": "#F278A1",
            "500": "#E91E63",
            "700": "#DE0059",
            "900": "#9E003F",
          },
          "success": Object {
            "100": "#dcedc8",
            "300": "#c9eda2",
            "500": "#7ed321",
            "700": "#3b610f",
            "900": "#004D40",
          },
          "warning": Object {
            "100": "#ffefd6",
            "300": "#ffda6a",
            "500": "#ffc107",
            "700": "#f09100",
            "900": "#d14900",
          },
        },
        "spacing": Object {
          "large": 24,
          "medium": 16,
          "small": 12,
          "xlarge": 32,
          "xsmall": 8,
          "xxlarge": 40,
          "xxsmall": 4,
          "xxxlarge": 48,
          "xxxsmall": 2,
        },
      }
    }
  >
    <div
      className="c0"
    >
      <style__RadialProgressBar
        className="progress"
        skin="primary"
        theme={
          Object {
            "baseFontSize": 16,
            "colors": Object {
              "error": Object {
                "100": "#fff5f5",
                "300": "#f88e86",
                "500": "#ec584e",
                "700": "#e91b0c",
                "900": "#ac001a",
              },
              "neutral": Object {
                "0": "#ffffff",
                "100": "#f2f2f2",
                "1000": "#000000",
                "300": "#e0e0e0",
                "500": "#999999",
                "700": "#424242",
                "900": "#191919",
              },
              "primary": Object {
                "100": "#E5EDFC",
                "300": "#89AAE7",
                "500": "#0CC0EA",
                "700": "#1250C4",
                "900": "#002F7B",
              },
              "secondary": Object {
                "100": "#F7B0C8",
                "300": "#F278A1",
                "500": "#E91E63",
                "700": "#DE0059",
                "900": "#9E003F",
              },
              "success": Object {
                "100": "#dcedc8",
                "300": "#c9eda2",
                "500": "#7ed321",
                "700": "#3b610f",
                "900": "#004D40",
              },
              "warning": Object {
                "100": "#ffefd6",
                "300": "#ffda6a",
                "500": "#ffc107",
                "700": "#f09100",
                "900": "#d14900",
              },
            },
            "spacing": Object {
              "large": 24,
              "medium": 16,
              "small": 12,
              "xlarge": 32,
              "xsmall": 8,
              "xxlarge": 40,
              "xxsmall": 4,
              "xxxlarge": 48,
              "xxxsmall": 2,
            },
          }
        }
      >
        <div
          className="c1 progress"
        >
          <RadialProgressOverlay
            skin="primary"
            theme={
              Object {
                "baseFontSize": 16,
                "colors": Object {
                  "error": Object {
                    "100": "#fff5f5",
                    "300": "#f88e86",
                    "500": "#ec584e",
                    "700": "#e91b0c",
                    "900": "#ac001a",
                  },
                  "neutral": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                  "primary": Object {
                    "100": "#E5EDFC",
                    "300": "#89AAE7",
                    "500": "#0CC0EA",
                    "700": "#1250C4",
                    "900": "#002F7B",
                  },
                  "secondary": Object {
                    "100": "#F7B0C8",
                    "300": "#F278A1",
                    "500": "#E91E63",
                    "700": "#DE0059",
                    "900": "#9E003F",
                  },
                  "success": Object {
                    "100": "#dcedc8",
                    "300": "#c9eda2",
                    "500": "#7ed321",
                    "700": "#3b610f",
                    "900": "#004D40",
                  },
                  "warning": Object {
                    "100": "#ffefd6",
                    "300": "#ffda6a",
                    "500": "#ffc107",
                    "700": "#f09100",
                    "900": "#d14900",
                  },
                },
                "spacing": Object {
                  "large": 24,
                  "medium": 16,
                  "small": 12,
                  "xlarge": 32,
                  "xsmall": 8,
                  "xxlarge": 40,
                  "xxsmall": 4,
                  "xxxlarge": 48,
                  "xxxsmall": 2,
                },
              }
            }
          >
            <div
              className="c2"
            >
              6
               
              of
               
              6
            </div>
          </RadialProgressOverlay>
        </div>
      </style__RadialProgressBar>
      <style__TextWrapper
        skin="primary"
        theme={
          Object {
            "baseFontSize": 16,
            "colors": Object {
              "error": Object {
                "100": "#fff5f5",
                "300": "#f88e86",
                "500": "#ec584e",
                "700": "#e91b0c",
                "900": "#ac001a",
              },
              "neutral": Object {
                "0": "#ffffff",
                "100": "#f2f2f2",
                "1000": "#000000",
                "300": "#e0e0e0",
                "500": "#999999",
                "700": "#424242",
                "900": "#191919",
              },
              "primary": Object {
                "100": "#E5EDFC",
                "300": "#89AAE7",
                "500": "#0CC0EA",
                "700": "#1250C4",
                "900": "#002F7B",
              },
              "secondary": Object {
                "100": "#F7B0C8",
                "300": "#F278A1",
                "500": "#E91E63",
                "700": "#DE0059",
                "900": "#9E003F",
              },
              "success": Object {
                "100": "#dcedc8",
                "300": "#c9eda2",
                "500": "#7ed321",
                "700": "#3b610f",
                "900": "#004D40",
              },
              "warning": Object {
                "100": "#ffefd6",
                "300": "#ffda6a",
                "500": "#ffc107",
                "700": "#f09100",
                "900": "#d14900",
              },
            },
            "spacing": Object {
              "large": 24,
              "medium": 16,
              "small": 12,
              "xlarge": 32,
              "xsmall": 8,
              "xxlarge": 40,
              "xxsmall": 4,
              "xxxlarge": 48,
              "xxxsmall": 2,
            },
          }
        }
      >
        <div
          className="c3"
        >
          <style__CurrentText
            skin="primary"
            theme={
              Object {
                "baseFontSize": 16,
                "colors": Object {
                  "error": Object {
                    "100": "#fff5f5",
                    "300": "#f88e86",
                    "500": "#ec584e",
                    "700": "#e91b0c",
                    "900": "#ac001a",
                  },
                  "neutral": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                  "primary": Object {
                    "100": "#E5EDFC",
                    "300": "#89AAE7",
                    "500": "#0CC0EA",
                    "700": "#1250C4",
                    "900": "#002F7B",
                  },
                  "secondary": Object {
                    "100": "#F7B0C8",
                    "300": "#F278A1",
                    "500": "#E91E63",
                    "700": "#DE0059",
                    "900": "#9E003F",
                  },
                  "success": Object {
                    "100": "#dcedc8",
                    "300": "#c9eda2",
                    "500": "#7ed321",
                    "700": "#3b610f",
                    "900": "#004D40",
                  },
                  "warning": Object {
                    "100": "#ffefd6",
                    "300": "#ffda6a",
                    "500": "#ffc107",
                    "700": "#f09100",
                    "900": "#d14900",
                  },
                },
                "spacing": Object {
                  "large": 24,
                  "medium": 16,
                  "small": 12,
                  "xlarge": 32,
                  "xsmall": 8,
                  "xxlarge": 40,
                  "xxsmall": 4,
                  "xxxlarge": 48,
                  "xxxsmall": 2,
                },
              }
            }
          >
            <strong
              className="c4"
            >
              Salários / benefícios
            </strong>
          </style__CurrentText>
          <NextStep
            skin="primary"
            theme={
              Object {
                "baseFontSize": 16,
                "colors": Object {
                  "error": Object {
                    "100": "#fff5f5",
                    "300": "#f88e86",
                    "500": "#ec584e",
                    "700": "#e91b0c",
                    "900": "#ac001a",
                  },
                  "neutral": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                  "primary": Object {
                    "100": "#E5EDFC",
                    "300": "#89AAE7",
                    "500": "#0CC0EA",
                    "700": "#1250C4",
                    "900": "#002F7B",
                  },
                  "secondary": Object {
                    "100": "#F7B0C8",
                    "300": "#F278A1",
                    "500": "#E91E63",
                    "700": "#DE0059",
                    "900": "#9E003F",
                  },
                  "success": Object {
                    "100": "#dcedc8",
                    "300": "#c9eda2",
                    "500": "#7ed321",
                    "700": "#3b610f",
                    "900": "#004D40",
                  },
                  "warning": Object {
                    "100": "#ffefd6",
                    "300": "#ffda6a",
                    "500": "#ffc107",
                    "700": "#f09100",
                    "900": "#d14900",
                  },
                },
                "spacing": Object {
                  "large": 24,
                  "medium": 16,
                  "small": 12,
                  "xlarge": 32,
                  "xsmall": 8,
                  "xxlarge": 40,
                  "xxsmall": 4,
                  "xxxlarge": 48,
                  "xxxsmall": 2,
                },
              }
            }
          >
            <small
              className="c5"
            >
               
              Contrato / Local 
            </small>
          </NextStep>
        </div>
      </style__TextWrapper>
    </div>
  </style__Wrapper>
</Stepper>
`;
